# zkFuelVM

./: README.md
lib/: Cargo.toml
risc0/: Cargo.toml
risc0/host/: Cargo.toml
risc0/host/src/: main.rs
risc0/methods/: Cargo.toml
risc0/methods/guest/: Cargo.toml
risc0/methods/guest/src/: main.rs
sp1/: .gitignore  Cargo.toml
sp1/elf/: riscv32im-succinct-zkvm-elf
sp1/program/: Cargo.toml
sp1/program/src/: main.rs
sp1/script/: Cargo.toml
