[package]
version = "0.1.0"
name = "fuel-vm-script"
edition = "2021"
default-run = "fuel-vm-program"

[[bin]]
name = "fuel-vm-program"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[dependencies]
sp1-sdk = "4.0.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
fuel-vm-lib= { path = "../../lib" }

[build-dependencies]
sp1-helper = "4.0.0"
