[package]
name = "fuel_vm"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.1.0-rc.3", default-features = false, features = ["std", "getrandom"] }
getrandom = { version = "0.1.16", features = ["dummy"] }
fuel-vm-lib = {path = "../../../lib"}
serde_json = { version = "1", default-features = false }
anyhow = "1.0.89"



